TEST_PROGRAMS/INVALID/08/badLvalue.go
package main;

func main() {
   var a[10] int;
   a[0] = 1;
   a[1] + 1 = 3;
}
